# workshop-agentes-de-ia

./: .gitignore  README.md  package.json  pnpm-lock.yaml  slides.md
datasets/: Relatorio-da-administracao.txt  golden-set-template.csv  golden-set.csv  golden-set.flowise.csv  relatorio-financeiro.txt
python/: README.md  config.py  constants.py  env.example  evaluate_deepeval.py  evaluate_langsmith.py  ingest.py  pyproject.toml  rag_agent.py  requirements.txt  test_rag.py
templates/: PetrobrasChat Chatflow.json  jailbreak-prompt.md  system_prompt.md  system_prompt.preenchido.md
